fix: adjust head navigation overflow

--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@ body{
 
 .header{
   display: flex;
+  width: 100%;
+  min-width: 420px;
   height: 6.5rem;
   align-items: center;
   justify-content: space-between;
@@ -114,7 +116,8 @@ body{
 
 .main-content{
   margin: auto;
-  width: 864px;
+  /*width: 864px;*/
+  width: 50%;
   padding: 15px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -173,18 +176,18 @@ body{
     width: 400px;
     height: 500px;
     padding: 30px;
-    background-color: rgb(219, 219, 219);
-    border-bottom-left-radius: 25px;
+    background-color: rgb(233, 233, 233);
+    border-bottom-left-radius: 5px;
     margin-right: 0;
     top: 0;
     right: -100%;
+    display: none;
     /*right: 0;*/
     /*border: 1px solid black;*/
-    transition: all .5s;
   }
   .show-menu{
+    display: block;
     right: 0;
-
   }
   .header__navigation-list{
     flex-direction: column;
